[gd_scene load_steps=5 format=3 uid="uid://btt61xvymlnub"]

[ext_resource type="Script" path="res://core/devices/menus/main-cir.gd" id="1_5rkkr"]
[ext_resource type="Theme" uid="uid://d3n6kqhglrbq2" path="res://ui/themes/empty/empty.tres" id="2_r6if8"]
[ext_resource type="AnimationLibrary" uid="uid://bnfp3omaim015" path="res://core/devices/themes/For_scheme_elements/Menus/play1.tres" id="4_3qdg7"]
[ext_resource type="PackedScene" uid="uid://dhcydj5r2vwp8" path="res://core/primitives/pill.tscn" id="6_vyone"]

[node name="main-cir" type="Node2D"]
script = ExtResource("1_5rkkr")
outline_color = Color(1, 0, 1, 1)

[node name="Button" type="Button" parent="."]
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -32.0
offset_right = 23.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(30, 19)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("2_r6if8")
toggle_mode = true
flat = true

[node name="body" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)

[node name="Main_bak" parent="body" instance=ExtResource("6_vyone")]
modulate = Color(1, 0, 1, 1)
z_index = -1
color = Color(0, 0, 0, 0.0980392)
offset = Vector2(-1, 4)
polygon = PackedVector2Array(88, 0, 87.5763, 8.62551, 86.3091, 17.1679, 84.2108, 25.545, 81.3014, 33.6761, 77.6091, 41.4829, 73.1693, 48.8902, 68.0249, 55.8266, 62.2254, 62.2254, 55.8266, 68.0249, 48.8902, 73.1693, 41.4829, 77.6091, 33.6761, 81.3014, 25.545, 84.2108, 17.1679, 86.3091, 8.62551, 87.5763, -3.36914e-14, 88, 5.38845e-15, 88, -8.62551, 87.5763, -17.1679, 86.3091, -25.545, 84.2108, -33.6761, 81.3014, -41.4829, 77.6091, -48.8902, 73.1693, -55.8266, 68.0249, -62.2254, 62.2254, -68.0249, 55.8266, -73.1693, 48.8902, -77.6091, 41.4829, -81.3014, 33.6761, -84.2108, 25.545, -86.3091, 17.1679, -87.5763, 8.62551, -88, -1.45543e-13, -88, 1.07769e-14, -87.5763, -8.62551, -86.3091, -17.1679, -84.2108, -25.545, -81.3014, -33.6761, -77.6091, -41.4829, -73.1693, -48.8902, -68.0249, -55.8266, -62.2254, -62.2254, -55.8266, -68.0249, -48.8902, -73.1693, -41.4829, -77.6091, -33.6761, -81.3014, -25.545, -84.2108, -17.1679, -86.3091, -8.62551, -87.5763, -1.72485e-13, -88, -1.61653e-14, -88, 8.62551, -87.5763, 17.1679, -86.3091, 25.545, -84.2108, 33.6761, -81.3014, 41.4829, -77.6091, 48.8902, -73.1693, 55.8266, -68.0249, 62.2254, -62.2254, 68.0249, -55.8266, 73.1693, -48.8902, 77.6091, -41.4829, 81.3014, -33.6761, 84.2108, -25.545, 86.3091, -17.1679, 87.5763, -8.62551, 88, -4.90512e-13)
width = 176.0
height = 176.0
roundness = 100.0
smooth = 16.0

[node name="Main_outline" parent="body" instance=ExtResource("6_vyone")]
modulate = Color(1, 0, 1, 1)
polygon = PackedVector2Array(88, 0, 87.5763, 8.62551, 86.3091, 17.1679, 84.2108, 25.545, 81.3014, 33.6761, 77.6091, 41.4829, 73.1693, 48.8902, 68.0249, 55.8266, 62.2254, 62.2254, 55.8266, 68.0249, 48.8902, 73.1693, 41.4829, 77.6091, 33.6761, 81.3014, 25.545, 84.2108, 17.1679, 86.3091, 8.62551, 87.5763, -3.36914e-14, 88, 5.38845e-15, 88, -8.62551, 87.5763, -17.1679, 86.3091, -25.545, 84.2108, -33.6761, 81.3014, -41.4829, 77.6091, -48.8902, 73.1693, -55.8266, 68.0249, -62.2254, 62.2254, -68.0249, 55.8266, -73.1693, 48.8902, -77.6091, 41.4829, -81.3014, 33.6761, -84.2108, 25.545, -86.3091, 17.1679, -87.5763, 8.62551, -88, -1.45543e-13, -88, 1.07769e-14, -87.5763, -8.62551, -86.3091, -17.1679, -84.2108, -25.545, -81.3014, -33.6761, -77.6091, -41.4829, -73.1693, -48.8902, -68.0249, -55.8266, -62.2254, -62.2254, -55.8266, -68.0249, -48.8902, -73.1693, -41.4829, -77.6091, -33.6761, -81.3014, -25.545, -84.2108, -17.1679, -86.3091, -8.62551, -87.5763, -1.72485e-13, -88, -1.61653e-14, -88, 8.62551, -87.5763, 17.1679, -86.3091, 25.545, -84.2108, 33.6761, -81.3014, 41.4829, -77.6091, 48.8902, -73.1693, 55.8266, -68.0249, 62.2254, -62.2254, 68.0249, -55.8266, 73.1693, -48.8902, 77.6091, -41.4829, 81.3014, -33.6761, 84.2108, -25.545, 86.3091, -17.1679, 87.5763, -8.62551, 88, -4.90512e-13)
width = 176.0
height = 176.0
roundness = 100.0
smooth = 16.0

[node name="Maint_top" parent="body" instance=ExtResource("6_vyone")]
z_index = 1
polygon = PackedVector2Array(86, 0, 85.5859, 8.42947, 84.3475, 16.7778, 82.2969, 24.9645, 79.4536, 32.9108, 75.8452, 40.5401, 71.5064, 47.779, 66.4789, 54.5578, 60.8112, 60.8112, 54.5578, 66.4789, 47.779, 71.5064, 40.5401, 75.8452, 32.9108, 79.4536, 24.9645, 82.2969, 16.7778, 84.3475, 8.42947, 85.5859, -3.29257e-14, 86, 5.26598e-15, 86, -8.42947, 85.5859, -16.7778, 84.3475, -24.9645, 82.2969, -32.9108, 79.4536, -40.5401, 75.8452, -47.779, 71.5064, -54.5578, 66.4789, -60.8112, 60.8112, -66.4789, 54.5578, -71.5064, 47.779, -75.8452, 40.5401, -79.4536, 32.9108, -82.2969, 24.9645, -84.3475, 16.7778, -85.5859, 8.42947, -86, -1.42235e-13, -86, 1.0532e-14, -85.5859, -8.42947, -84.3475, -16.7778, -82.2969, -24.9645, -79.4536, -32.9108, -75.8452, -40.5401, -71.5064, -47.779, -66.4789, -54.5578, -60.8112, -60.8112, -54.5578, -66.4789, -47.779, -71.5064, -40.5401, -75.8452, -32.9108, -79.4536, -24.9645, -82.2969, -16.7778, -84.3475, -8.42947, -85.5859, -1.68565e-13, -86, -1.57979e-14, -86, 8.42947, -85.5859, 16.7778, -84.3475, 24.9645, -82.2969, 32.9108, -79.4536, 40.5401, -75.8452, 47.779, -71.5064, 54.5578, -66.4789, 60.8112, -60.8112, 66.4789, -54.5578, 71.5064, -47.779, 75.8452, -40.5401, 79.4536, -32.9108, 82.2969, -24.9645, 84.3475, -16.7778, 85.5859, -8.42947, 86, -4.79364e-13)
width = 172.0
height = 172.0
roundness = 100.0
smooth = 16.0

[node name="mplay" type="AnimationPlayer" parent="."]
libraries = {
"": ExtResource("4_3qdg7")
}

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="Button" to="." method="_on_button_toggled"]
